# mqtt2aprs

./: Dockerfile  LICENSE  README.md  pyproject.toml
mqtt2aprs/: aprsutil.py  mqtt2aprs.py
mqtt2aprs/tests/: test_aprsutil.py
